[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Niveles/Naves/NaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Niveles/Naves/Player/Enemigos/nave_enemigo.png" type="Texture" id=2]
[ext_resource path="res://Juego/Niveles/Naves/Player/Enemigos/spawn_enemigo.png" type="Texture" id=3]
[ext_resource path="res://Juego/Niveles/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Niveles/Naves/Player/Enemigos/EnemigoInterceptor.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 76.3217

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteSpawn:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteSpawn:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.760784 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.4, 0.4 ), Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteSpawn:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 2.5, 2.5 ), Vector2( 4, 4 ), Vector2( 2.9, 2.9 ), Vector2( 0.2, 0.2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteSpawn:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.552941 ), Color( 1, 1, 1, 0.760784 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.486275 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 332.456

[sub_resource type="CircleShape2D" id=6]
radius = 835.434

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0509804, 0.964706, 0.203922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0627451, 0.054902, 0.054902, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.921569, 0.498039, 0.498039, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.0470588, 0.0470588, 1 )
border_blend = true

[node name="EnemigoBase" instance=ExtResource( 1 )]
z_index = 30
z_as_relative = false
collision_layer = 2
collision_mask = 11
physics_material_override = SubResource( 1 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 5 )
potencia_max = 800.0

[node name="Sprite" parent="." index="0"]
visible = false
rotation = -1.5708
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="Canion" parent="." index="2"]
proyectil = ExtResource( 4 )
cadencia_disparo = 1.2
velocidad_proyectil = 1200

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -23 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( 0, 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "spawn"
anims/default = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="SpriteSpawn" type="Sprite" parent="." index="5"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="AreaDisparo" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDisparo" index="0"]
shape = SubResource( 5 )

[node name="AreaDeteccion" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeteccion" index="0"]
shape = SubResource( 6 )

[node name="BarraSalud" parent="." index="8"]
margin_left = -105.0
margin_top = 68.0
margin_right = 31.0
margin_bottom = 87.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDisparo" to="." method="_on_AreaDisparo_body_entered"]
[connection signal="body_exited" from="AreaDisparo" to="." method="_on_AreaDisparo_body_exited"]
[connection signal="body_entered" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_entered"]
[connection signal="body_exited" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_exited"]

[editable path="Canion"]
